backend/manifests/devices-deployment.yml
#########################################################
# Devices service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devices-deployment
  namespace: default
  labels:
    name: devices-deployment
    app: sistem-za-upravljanje-energije
spec:
  selector:
    matchLabels:
      app: devices
  replicas: 2
  template:
    metadata:
      labels:
        app: devices
    spec:
      containers:
        - name: devices
          image: zigac24/sistem-za-upravljanje-energije:molecular_v1
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 40Mi
