backend/manifests/gpt-deployment.yml
#########################################################
# gpt service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpt-deployment
  namespace: default
  labels:
    name: gpt-deployment
    app: sistem-za-upravljanje-energije
spec:
  selector:
    matchLabels:
      app: gpt
  replicas: 2
  template:
    metadata:
      labels:
        app: gpt
    spec:
      containers:
        - name: gpt
          image: zigac24/sistem-za-upravljanje-energije:molecular_v1
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 40Mi
