backend/manifests/redis.yml
apiVersion: apps/v1 # API version
kind: Deployment
metadata:
  name: redis # Unique name for the deployment
  labels:
    app: redis # Labels to be applied to this deployment
spec:
  selector:
    matchLabels: # This deployment applies to the Pods matching these labels
      app: redis
  replicas: 1 # Run a single pod in the deployment
  template: # Template for the pods that will be created by this deployment
    metadata:
      labels: # Labels to be applied to the Pods in this deployment
        app: redis
    spec: # Spec for the container which will be run inside the Pod.
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 40Mi
