backend/manifests/api-deployment.yml
#########################################################
# Service for Moleculer API Gateway service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: default
  labels:
    name: api
    app: sistem-za-upravljanje-energije
spec:
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer

---
#########################################################
# API Gateway Deployment
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: default
  labels:
    name: api
    app: sistem-za-upravljanje-energije
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: zigac24/sistem-za-upravljanje-energije:molecular_v1
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 40Mi
